bin_PROGRAMS =  fa2dna  dnaindex  anfo-tool  anfo
libexec_PROGRAMS =  martin-table  file-info  index-test  mk_random_dna  random_sample
lib_LTLIBRARIES = libanfo.la
dist_pkgdata_DATA = config.proto output.proto 
pkginclude_HEADERS = align.h align_fwd.h anfo_common.h compress_stream.h \
		     concurrent_stream.h conffile.h ducttape.h index.h \
		     logdom.h misc_streams.h output_streams.h sequence.h \
		     stream.h trim.h util.h

schemedir = $(prefix)/share/elk
scheme_SCRIPTS = anfo.scm
dist_scheme_SCRIPTS = srfi-88.scm srfi-89.scm
EXTRA_DIST = anfo.scm.in

BUILT_SOURCES = config.pb.h output.pb.h config.pb.cc output.pb.cc
CLEANFILES = config.pb.h output.pb.h config.pb.cc output.pb.cc anfo.scm

AM_CFLAGS = $(protobuf_CFLAGS)
AM_CXXFLAGS = $(protobuf_CFLAGS)
LDADD = libanfo.la

libanfo_la_LDFLAGS = -version-info 0:0:0
libanfo_la_LIBADD = $(protobuf_LIBS) -lpthread

nodist_libanfo_la_SOURCES = config.pb.h output.pb.h config.pb.cc output.pb.cc
libanfo_la_SOURCES = align.cc anfo_common.cc concurrent_stream.cc \
		     ducttape.cc index.cc misc_streams.cc \
		     output_streams.cc sequence.cc stream.cc util.cc \
		     anfo-elk.cc fastlz.h fastlz.c

anfo_SOURCES = anfo.cc
anfo_tool_SOURCES = anfo-tool.cc
dnaindex_SOURCES = dnaindex.cc 
fa2dna_SOURCES = fa2dna.cc 
file_info_SOURCES = file-info.cc
index_test_SOURCES = index-test.cc
martin_table_SOURCES = martin-table.cc 

mk_random_dna_SOURCES = mk_random_dna.cc
random_sample_SOURCES = random_sample.cc

anfo.scm: anfo.scm.in
	echo "; DO NOT EDIT THIS FILE!  EDIT anfo.scm.in AND RUN MAKE INSTEAD!" > anfo.scm
	sed -e "s#__LIBDIR__#$(libdir)#g" < $(srcdir)/anfo.scm.in >> anfo.scm

config.pb.cc: config.proto
	$(PROTOC) -I. -I$(PROTOBUF_INCLUDES) --cpp_out=. config.proto

output.pb.cc: output.proto
	$(PROTOC) -I. -I$(PROTOBUF_INCLUDES) --cpp_out=. output.proto

config.pb.h: config.pb.cc
	@:

output.pb.h: output.pb.cc
	@:

